# insightface-openvino

./: CMakeLists.txt  README.md  readme
include/: insightface.hpp
model/: REAME
src/: demo.cpp  insightface.cpp
